# krywok-pipeline-plugin-i18n

./: README.md  pyproject.toml
pipeline_plugin_i18n/: plugin.py
